--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_math_util
-	previous = 
-	base = 0b2609025c1f
+	previous = 0b2609025c1f
+	base = b402ee7f4202
 	trim = 
 	trimbase = 
