--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_cli_tools
-	previous = 
-	base = 6e2440ffc1ed
+	previous = 6e2440ffc1ed
+	base = adb3e557117c
 	trim = 
 	trimbase = 
