--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_serial_util
-	previous = 
-	base = d59982026e60
+	previous = d59982026e60
+	base = a2510079dca7
 	trim = 
 	trimbase = 
