--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_transform_util
-	previous = 
-	base = 24284842a901
+	previous = 24284842a901
+	base = 354ba8fdc1d8
 	trim = 
 	trimbase = 
