--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_prefix_tools
-	previous = 
-	base = 66405b88cb16
+	previous = 66405b88cb16
+	base = d20105d85b0a
 	trim = 
 	trimbase = 
