--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_dbw_interface
-	previous = 
-	base = 1710f3e09598
+	previous = 1710f3e09598
+	base = aedd0b1eb579
 	trim = 
 	trimbase = 
