--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_image_util
-	previous = 
-	base = ad7a1d614989
+	previous = ad7a1d614989
+	base = 05423bd05469
 	trim = 
 	trimbase = 
