--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_route_util
-	previous = 
-	base = 4caa708f0efe
+	previous = 4caa708f0efe
+	base = 2d7f538abdf8
 	trim = 
 	trimbase = 
