--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_system_util
-	previous = 
-	base = 210c7d436115
+	previous = 210c7d436115
+	base = b4c6aac61b52
 	trim = 
 	trimbase = 
