--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_console_util
-	previous = 
-	base = 324246c929f4
+	previous = 324246c929f4
+	base = 123f15d9dbbd
 	trim = 
 	trimbase = 
