--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_opencv_util
-	previous = 
-	base = b00f912bffbf
+	previous = b00f912bffbf
+	base = 27fdd201dc23
 	trim = 
 	trimbase = 
