--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_geometry_util
-	previous = 
-	base = fa70815e37bd
+	previous = fa70815e37bd
+	base = 436986be1214
 	trim = 
 	trimbase = 
