--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/swri_roscpp
-	previous = 
-	base = 6a55de02c8b2
+	previous = 6a55de02c8b2
+	base = 6b1fb4e488bf
 	trim = 
 	trimbase = 
