--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_transform_util
+	parent = release/rolling/swri_transform_util/3.6.1-2
 	previous = 24284842a901
 	base = ae073f84cbe3
 	trim = 
