--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_geometry_util
+	parent = release/rolling/swri_geometry_util/3.6.1-2
 	previous = fa70815e37bd
 	base = 3908ec6faa51
 	trim = 
