--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_cli_tools
+	parent = release/rolling/swri_cli_tools/3.6.1-2
 	previous = 6e2440ffc1ed
 	base = ef17e7c226e1
 	trim = 
