--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_console_util
+	parent = release/rolling/swri_console_util/3.6.1-2
 	previous = 324246c929f4
 	base = ce5272dbe1bb
 	trim = 
