--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_dbw_interface
+	parent = release/rolling/swri_dbw_interface/3.6.1-2
 	previous = 1710f3e09598
 	base = 3d0388629090
 	trim = 
