--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_prefix_tools
+	parent = release/rolling/swri_prefix_tools/3.6.1-2
 	previous = 66405b88cb16
 	base = 01bdb39f683b
 	trim = 
