--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_roscpp
+	parent = release/rolling/swri_roscpp/3.6.1-2
 	previous = 6a55de02c8b2
 	base = 2075bda499ef
 	trim = 
