--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_opencv_util
+	parent = release/rolling/swri_opencv_util/3.6.1-2
 	previous = b00f912bffbf
 	base = f56f6edf917e
 	trim = 
