--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_route_util
+	parent = release/rolling/swri_route_util/3.6.1-2
 	previous = 4caa708f0efe
 	base = ffad3d081fd7
 	trim = 
