--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_image_util
+	parent = release/rolling/swri_image_util/3.6.1-2
 	previous = ad7a1d614989
 	base = 12d6022e6d73
 	trim = 
