--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_math_util
+	parent = release/rolling/swri_math_util/3.6.1-2
 	previous = 0b2609025c1f
 	base = 2ceede994258
 	trim = 
