--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_serial_util
+	parent = release/rolling/swri_serial_util/3.6.1-2
 	previous = d59982026e60
 	base = ef8b941804fe
 	trim = 
