--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/swri_system_util
+	parent = release/rolling/swri_system_util/3.6.1-2
 	previous = 210c7d436115
 	base = 4bcce89434f6
 	trim = 
